# Agora

Agora-Auth/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
Agora-Auth/src/: lib.rs  main.rs
Agora-Auth/src/adapters/: mod.rs
Agora-Auth/src/adapters/crypto/: mod.rs
Agora-Auth/src/adapters/crypto/error/: crypto_error.rs  jwt_error.rs  mod.rs  password_error.rs
Agora-Auth/src/adapters/crypto/password/: argon2_hasher.rs  mod.rs
Agora-Auth/src/adapters/crypto/token/: eddsa_keys.rs  eddsa_token_service.rs  hmac_keys.rs  hmac_token_service.rs  mod.rs
Agora-Auth/src/adapters/http/: mod.rs  state.rs
Agora-Auth/src/adapters/persistence/: database.rs  id_conversion.rs  mod.rs
Agora-Auth/src/bootstrap/: bootstrap.rs  config.rs  mod.rs  server.rs  wiring.rs
Agora-Auth/src/bootstrap/tests/: config_test.rs  mod.rs  server_test.rs  wiring_test.rs
Agora-Auth/src/core/: mod.rs
Agora-Auth/src/core/credentials/: credential_policy.rs  credential_status.rs  mod.rs  raw_credential.rs  stored_credential.rs
Agora-Auth/src/core/error/: authentication_error.rs  credential_error.rs  invariant_error.rs  mod.rs  token_error.rs
Agora-Auth/src/core/identity/: contextual_identity.rs  identity_claims.rs  mod.rs  user_identity.rs
Agora-Auth/src/core/token/: mod.rs  token.rs  token_claims.rs  token_lifetime.rs  token_validation.rs
Agora-Auth/src/core/usecases/: authenticate_user.rs  issue_service_token.rs  issue_session.rs  issue_session_for_identity.rs  mod.rs  refresh_session.rs  revoke_session.rs  validate_access_token.rs
Workspace/: .dockerignore  pom.xml  (+3 more)
(+189 files in other folders)
