[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
sha2 = "0.10"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
ring = "0.17.14"
rand = "0.10.0"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
anyhow = "1.0.102"
futures = "0.3.32"
hex = "0.4.3"
dotenvy = "0.15"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
